welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:6: error: not found: value min
    return min(a,b)
           ^maxMod5:9: error: not found: value max
    return max(a,b)
           ^maxMod5:8: error: type mismatch;
 found   : Unit
 required: Int
  if (a!=b){
  ^